--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/TravonteD/tree-sitter-fennel",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.21",
     "nan": "^2.14.0"
   },
   "devDependencies": {
