chore: commit save point

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "tree-sitter grammar for Fennel",
   "main": "bindings/node",
   "author": "",
+  "type": "commonjs",
   "repository": "https://github.com/TravonteD/tree-sitter-fennel",
   "license": "ISC",
   "dependencies": {
