--- a/.editorconfig
+++ b/.editorconfig
@@ -4,5 +4,5 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[grammar.js,src/scanner.c]
+[grammar.js,grammar-lib/**.js,extensions/**.js,src/scanner.c]
 indent_style = tab
